--- a/submission_scripts/snakemake/Snakefile
+++ b/submission_scripts/snakemake/Snakefile
@@ -1,11 +1,11 @@
 import numpy as np
 
 
-configfile: "/n/holylfs05/LABS/arguelles_delgado_lab/Everyone/jbook/snkmk_test/config/hnl_19000.yaml"
+configfile: "config/hnl_11112.yaml"
 
 
 ARRAY_NUMS = np.arange(
-    5, 6, 1
+    1, 6, 5
 )  # numpy gives ranges on a half-open interval, so this gives 1-2.
 FILE_NUMS = np.arange(1, 3, 1)
 
@@ -34,8 +34,13 @@ rule L2:
             output_prefix=config["output_prefix"],
             set_number=config["set_number"],
         ),
+        expand(
+            "{output_prefix}{set_number}/L2/{{array_number}}_{{file_number}}.hdf5",
+            output_prefix=config["output_prefix"],
+            set_number=config["set_number"],
+        ),
     shell:
-        "export PYTHONPATH=/n/home00/jbook/.local/lib/python3.7/site-packages:$PYTHONPATH && source /n/holylfs05/LABS/arguelles_delgado_lab/Everyone/jbook/i3/build/env-shell-snkmk.sh python /n/holylfs05/LABS/arguelles_delgado_lab/Everyone/jbook/HNL_search_v2/submission_scripts/process/process_L2.py --identifier_out={config[set_number]} --input {input} --output {output}"
+        "export PYTHONPATH=/n/home00/jbook/.local/lib/python3.7/site-packages:$PYTHONPATH && source /n/holylfs05/LABS/arguelles_delgado_lab/Everyone/jbook/i3/build/env-shell-snkmk.sh python /n/holylfs05/LABS/arguelles_delgado_lab/Everyone/jbook/HNL_search_v2/submission_scripts/process/process_L2.py --identifier_out={config[set_number]} --input {input} --output {output[0]}"
 
 
 rule L1:
@@ -51,8 +56,13 @@ rule L1:
             output_prefix=config["output_prefix"],
             set_number=config["set_number"],
         ),
+        expand(
+            "{output_prefix}{set_number}/L1/{{array_number}}_{{file_number}}.hdf5",
+            output_prefix=config["output_prefix"],
+            set_number=config["set_number"],
+        ),
     shell:
-        "export PYTHONPATH=/n/home00/jbook/.local/lib/python3.7/site-packages:$PYTHONPATH && source /n/holylfs05/LABS/arguelles_delgado_lab/Everyone/jbook/i3/build/env-shell-snkmk.sh python /n/holylfs05/LABS/arguelles_delgado_lab/Everyone/jbook/HNL_search_v2/submission_scripts/process/process_L1.py --identifier_out={config[set_number]} --input {input} --output {output}"
+        "export PYTHONPATH=/n/home00/jbook/.local/lib/python3.7/site-packages:$PYTHONPATH && source /n/holylfs05/LABS/arguelles_delgado_lab/Everyone/jbook/i3/build/env-shell-snkmk.sh python /n/holylfs05/LABS/arguelles_delgado_lab/Everyone/jbook/HNL_search_v2/submission_scripts/process/process_L1.py --identifier_out={config[set_number]} --input {input} --output {output[0]}"
 
 
 rule detector:
@@ -68,16 +78,15 @@ rule detector:
             output_prefix=config["output_prefix"],
             set_number=config["set_number"],
         ),
+        expand(
+            "{output_prefix}{set_number}/Det/{{array_number}}_{{file_number}}.hdf5",
+            output_prefix=config["output_prefix"],
+            set_number=config["set_number"],
+        ),
     params:
         seed=lambda wc: int(wc.array_number) * 1000 + int(wc.file_number),
-    # conda:
-    #     "snkmk_test_env.yaml"
-    # shell:
-    #     "python /n/holylfs05/LABS/arguelles_delgado_lab/Everyone/jbook/HNL_search_v2/submission_scripts/process/process_Det.py --runnumber {params.seed} --infile {input} --outfile {output}"
-    # script:
-        # "scripts/submit_det.sh"
     shell:
-        "export PYTHONPATH=/n/home00/jbook/.local/lib/python3.7/site-packages:$PYTHONPATH && source /n/holylfs05/LABS/arguelles_delgado_lab/Everyone/jbook/i3/build/env-shell.sh  python /n/holylfs05/LABS/arguelles_delgado_lab/Everyone/jbook/HNL_search_v2/submission_scripts/process/process_Det.py --runnumber {params.seed} --infile {input} --outfile {output} && echo 'python run'"
+        "export PYTHONPATH=/n/home00/jbook/.local/lib/python3.7/site-packages:$PYTHONPATH && source /n/holylfs05/LABS/arguelles_delgado_lab/Everyone/jbook/i3/build/env-shell.sh  python /n/holylfs05/LABS/arguelles_delgado_lab/Everyone/jbook/HNL_search_v2/submission_scripts/process/process_Det.py --runnumber {params.seed} --infile {input} --outfile {output[0]}"
 
 rule photon:
     input:
@@ -92,6 +101,11 @@ rule photon:
             output_prefix=config["output_prefix"],
             set_number=config["set_number"],
         ),
+        expand(
+            "{output_prefix}{set_number}/Phot/{{array_number}}_{{file_number}}.hdf5",
+            output_prefix=config["output_prefix"],
+            set_number=config["set_number"],
+        ),
     params:
         seed=lambda wc: int(wc.array_number) * 1000 + int(wc.file_number),
     resources:
@@ -99,7 +113,7 @@ rule photon:
         slurm_extra="'--gres=gpu:nvidia_a100_1g.10gb:1'",
         runtime=300,
     shell:
-        "sbatch --export=SEED={params.seed},OUTFILE_fullpath={output},INFILE_fullpath={input} scripts/photon_jobs.sbatch"
+        "sbatch --export=SEED={params.seed},OUTFILE_fullpath={output[0]},INFILE_fullpath={input} scripts/photon_jobs.sbatch"
     # shell:
     #     "sbatch --export=RUN_N={wildcards.array_number},FILE_N={wildcards.file_number},SET_N={config[set_number]},nEVENTS={config[n_events]},HNL_MASS={config[hnl_mass]},OUTDIR={config[output_prefix]},OUTFILE=placeholder.i3.zst scripts/photon_jobs.sbatch"
     # shell:
@@ -116,9 +130,14 @@ rule generation:
             output_prefix=config["output_prefix"],
             set_number=config["set_number"],
         ),
+        expand(
+            "{output_prefix}{set_number}/Gen/{{array_number}}_{{file_number}}.hdf5",
+            output_prefix=config["output_prefix"],
+            set_number=config["set_number"],
+        ),
     params:
         mass=config["hnl_mass"],
         seed=lambda wc: int(wc.array_number) * 1000 + int(wc.file_number),
         n_events={config["n_events"]},
     shell:
-        "source /n/holylfs05/LABS/arguelles_delgado_lab/Everyone/jbook/i3/build/env-shell.sh python /n/holylfs05/LABS/arguelles_delgado_lab/Everyone/jbook/HNL_search_v2/submission_scripts/process/process_Gen.py --seed {params.seed} --outfile {output} --nEvents {config[n_events]} -m {config[hnl_mass]}"
+        "source /n/holylfs05/LABS/arguelles_delgado_lab/Everyone/jbook/i3/build/env-shell.sh python /n/holylfs05/LABS/arguelles_delgado_lab/Everyone/jbook/HNL_search_v2/submission_scripts/process/process_Gen.py --seed {params.seed} --outfile {output[0]} --nEvents {config[n_events]} -m {config[hnl_mass]}"
